--- a/form_app/templates/form_app/from.html
+++ b/form_app/templates/form_app/from.html
@@ -67,22 +67,24 @@
             </td>
             <hr>
             <td>
-                <textarea  rows="19" cols="42">محتویات
-                  ۱ پیشینه
-                      ۱.۱ دوران قدیم
-                      ۱.۲ دانشگاه‌های قرون وسطی
-                      ۱.۳ دانشگاه‌های مدرن دوران نخست
-                      ۱.۴ دانشگاه‌های مدرن
-                  ۲ آینده
-                  ۳ سازمان
-                  ۴ دانشگاه‌های سراسر جهان
-                  ۵ پذیرش دانشجو
-                      ۵.۱ پذیرش دانشجو با اخذ شهریه
-                      ۵.۲ پذیرش از طریق کنکور
-                  ۶ کاربردهای محاوره‌ای
-                  ۷ جستارهای وابسته
-                  ۸ منابع
-              </textarea>
+                <div class="container text-center">
+                    <textarea  rows="19" cols="42">محتویات
+                        ۱ پیشینه
+                            ۱.۱ دوران قدیم
+                            ۱.۲ دانشگاه‌های قرون وسطی
+                            ۱.۳ دانشگاه‌های مدرن دوران نخست
+                            ۱.۴ دانشگاه‌های مدرن
+                        ۲ آینده
+                        ۳ سازمان
+                        ۴ دانشگاه‌های سراسر جهان
+                        ۵ پذیرش دانشجو
+                            ۵.۱ پذیرش دانشجو با اخذ شهریه
+                            ۵.۲ پذیرش از طریق کنکور
+                        ۶ کاربردهای محاوره‌ای
+                        ۷ جستارهای وابسته
+                        ۸ منابع
+                    </textarea>
+                </div>
               </td>
              
               <td><tr><ul><h3 class="name1" >پیشینه</h3></ul></tr></td>
